--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <br>expertise si to create website
             </p>
             <div class="home-sci">
-                <a href="https://www.facebook.com/priyabrata.ghosh.9406?mibextid=rS40aB7S9Ucbxw6v" style="--i:6"><i class='bx bxl-facebook'></i></a>
-                <a href="https://www.instagram.com/priyabrata123g?igsh=MTduYXdleDZ4NTd5eQ==" style="--i:7"><i class='bx bxl-instagram' ></i></a>
-                <a href="https://wa.me/+918145939963" style="--i:8"><i class='bx bxl-whatsapp' ></i></a>
+                <a href="" style="--i:6"><i class='bx bxl-facebook'></i></a>
+                <a href="" style="--i:7"><i class='bx bxl-instagram' ></i></a>
+                <a href="" style="--i:8"><i class='bx bxl-whatsapp' ></i></a>
                 <a href="#" style="--i:9"><i class='bx bxl-linkedin' ></i></a>
                 </div>
                 <a href="#" class="btn-box">More About Me</a>
@@ -193,12 +193,12 @@
         <h4>Let's work Together</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda sapiente consequuntur quasi, porro ratione laborum quos! Numquam sed, consequatur aspernatur consectetur nihil autem quae iure quod odio alias impedit dolore.</p>
         <div class="contact-list">
-            <li><i class='bx bxs-send bx-tada'   ></i>priyo.ghosh321@gmail.com</li>
-            <li><i class='bx bxs-phone bx-tada' ></i>8145939963</li>
+            <li><i class='bx bxs-send bx-tada'   ></i></li>
+            <li><i class='bx bxs-phone bx-tada' ></i></li>
         </div>
         <div class="contact-icons">
-            <a href="https://www.facebook.com/priyabrata.ghosh.9406?mibextid=rS40aB7S9Ucbxw6v"><i class='bx bxl-facebook-circle' ></i></a>
-            <a href="https://www.instagram.com/priyabrata123g?igsh=MTduYXdleDZ4NTd5eQ=="><i class='bx bxl-instagram' ></i></a>
+            <a href=""><i class='bx bxl-facebook-circle' ></i></a>
+            <a href=""><i class='bx bxl-instagram' ></i></a>
             <a href=""><i class='bx bxl-linkedin' ></i></a>
         </div>
     </div>
